--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -61,19 +61,24 @@
                                                  </div>
                                                 <!--LIKES-->
                                                 {% if prethodna_objava != obj.objava_id %}
-                                                     <!--<form action="{% url 'objava:like' %}" method="post">-->
+                                                     <form id="like_dislike{{obj.objava_id}}" action="{% url 'objava:like' %}" method="post">
                                                          {% csrf_token %}
                                                          <input type="hidden" value="{{ user.username }}" name="html_user">
                                                          <input type="hidden" value="{{ obj.objava_id }}" name="html_objava">
                                                           <div class="comment_extras d-flex flex-row align-items-center justify-content-start">
                                                             {% if obj.objava_id not in user_likes %}
-                                                               <!--<button type="submit" name="html_like" value="html_like">Like</button>-->
-                                                                <div class="comment_extra comment_likes"><a href="#"><i class="fa fa-thumbs-up" style="font-size:22px;color:blue"></i><span>{{ obj.getlikes }}</span></a></div>
+                                                              <input type="hidden" value="html_like" name="html_like">
+                                                              <div class="comment_extra comment_likes"><a><i class="fa fa-thumbs-up" style="font-size:22px;color:blue" onclick="document.forms['like_dislike{{obj.objava_id}}'].submit()"></i><span>{{ obj.getlikes }}</span></a></div>
                                                             {% else %}
-                                                                <button type="submit" name="html_like" value="html_dislike">Disike</button>
+                                                                <input type="hidden" value="html_dislike" name="html_like">
+                                                              <div class="comment_extra comment_likes"><a><i class="fa fa-thumbs-down" style="font-size:22px;color:blue" onclick="document.forms['like_dislike{{obj.objava_id}}'].submit()"></i><span>{{ obj.getlikes }}</span></a></div>
                                                             {% endif %}
                                                           </div>
-                                                     <!--</form>-->
+                                                         <input type="hidden" value="{{ studij_id }}" name="get_studij_id">
+                                                         <input type="hidden" value="{{ kolegij_id }}" name="get_kolegij_id">
+                                                         <input type="hidden" value="{{ semestar_num }}" name="get_semestar_num">
+                                                         <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
+                                                     </form>
                                                 {% endif %}
 
                                         </div>
