--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -1,25 +1,195 @@
 {% extends 'account/mypage.html' %}
+{% load static from staticfiles %}
+{% load extras %}
 
 {% block content %}
-<form method="post">
-    <br><br><br><br><br><br>
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit" name="dodaj_temu">Dodaj novu temu</button>
-</form>
-<br><br><br>
-<h1>{{kolegij_id}}</h1>
-<form method="post">
-    {% csrf_token %}
-    {% if moj_kolegij %}
-    <button type="submit" name="favorit">Izbrisi iz mojih kolegija</button>
-    {% else %}
-    <button type="submit" name="favorit">Dodaj u moj kolegij</button>
-    {% endif %}
-</form>
-<br><br><br>
-<h2>Otvorene teme:</h2>
- {% for tema in sve_teme %}
-      <a href="/objava/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}">{{tema.tema_ime}}</a><br><br>
-    {% endfor %}
+
+
+<meta name="description" content="Unicat project">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/style_login.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'plugins/colorbox/colorbox.css' %}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course_responsive.css' %}">
+
+<div class="super_container">
+    <br><br><br>
+    <div class="course">
+		<div class="container">
+			<div class="row">
+
+				<!-- Course -->
+				<div class="col-lg-8">
+
+					<div class="course_container">
+						<div class="course_title">{{kolegij_id}}
+
+                        </div>
+                        <form method="post">
+                                {% csrf_token %}
+                                ide zvjezdica
+                                {% if moj_kolegij %}
+                                <button type="submit" name="favorit">Izbrisi iz mojih kolegija</button>
+                                {% else %}
+                                <button type="submit" name="favorit">Dodaj u moj kolegij</button>
+                                {% endif %}
+                        </form>
+
+						<!-- Course Tabs -->
+						<div class="course_tabs_container">
+							<div class="tabs d-flex flex-row align-items-center justify-content-start">
+								<div class="tab active">Opis kolegija</div>
+								<div class="tab">Materijali</div>
+							</div>
+
+							<div class="tab_panels">
+
+								<!-- Description -->
+								<div class="tab_panel active">
+									<div class="tab_panel_title">Software Training</div>
+									<div class="tab_panel_content">
+										<div class="tab_panel_text">
+											<p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosquad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Lorem Ipsn gravida nibh vel velit auctor aliquet. Class aptent taciti sociosquad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+										</div>
+										<div class="tab_panel_section">
+											<div class="tab_panel_subtitle">Requirements</div>
+											<ul class="tab_panel_bullets">
+												<li>Lorem Ipsn gravida nibh vel velit auctor aliquet. Class aptent taciti sociosquad litora torquent.</li>
+												<li>Cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a.</li>
+												<li>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat.</li>
+												<li>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</li>
+											</ul>
+										</div>
+										<div class="tab_panel_section">
+											<div class="tab_panel_subtitle">What is the target audience?</div>
+											<div class="tab_panel_text">
+												<p>This course is intended for anyone interested in learning to master his or her own body.This course is aimed at beginners, so no previous experience with hand balancing skillts is necessary Aenean viverra tincidunt nibh, in imperdiet nunc. Suspendisse eu ante pretium, consectetur leo at, congue quam. Nullam hendrerit porta ante vitae tristique. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+											</div>
+										</div>
+										<div class="tab_panel_faq">
+											<div class="tab_panel_title">FAQ</div>
+
+											<!-- Accordions -->
+											<div class="accordions">
+
+												<div class="elements_accordions">
+
+													<div class="accordion_container">
+														<div class="accordion d-flex flex-row align-items-center"><div>Can I just enroll in a single course?</div></div>
+														<div class="accordion_panel">
+															<p>Lorem ipsun gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a.</p>
+														</div>
+													</div>
+
+													<div class="accordion_container">
+														<div class="accordion d-flex flex-row align-items-center active"><div>I'm not interested in the entire Specialization?</div></div>
+														<div class="accordion_panel">
+															<p>Lorem ipsun gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a.</p>
+														</div>
+													</div>
+
+													<div class="accordion_container">
+														<div class="accordion d-flex flex-row align-items-center"><div>What is the refund policy?</div></div>
+														<div class="accordion_panel">
+															<p>Lorem ipsun gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a.</p>
+														</div>
+													</div>
+
+													<div class="accordion_container">
+														<div class="accordion d-flex flex-row align-items-center"><div>What background knowledge is necessary?</div></div>
+														<div class="accordion_panel">
+															<p>Lorem ipsun gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a.</p>
+														</div>
+													</div>
+
+													<div class="accordion_container">
+														<div class="accordion d-flex flex-row align-items-center"><div>Do i need to take the courses in a specific order?</div></div>
+														<div class="accordion_panel">
+															<p>Lorem ipsun gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a.</p>
+														</div>
+													</div>
+
+												</div>
+
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<!-- Materijali -->
+								<div class="tab_panel tab_panel_2">
+									<div class="tab_panel_content">
+										<div class="tab_panel_title">Dodaj novu temu</div>
+										<div class="tab_panel_content">
+											<div class="tab_panel_text">
+												<form method="post">
+                                                    {% csrf_token %}
+                                                    <input type="text" name="tema_ime" maxlength="50" required="" id="id_tema_ime">
+                                                    <button type="submit" name="dodaj_temu">Dodaj</button>
+                                                </form>
+											</div>
+
+											<!-- Popis svih trenutnih tema -->
+                                            {% for tema in sve_teme %}
+                                            <div class="dropdown_item">
+                                                <div class="dropdown_item_title">
+                                                    <a href="/objava/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}"><span>{{tema.tema_ime}}</span></a>
+                                                <div class="dropdown_item_text">
+                                                    <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
+                                                </div>
+                                            </div>
+                                            {% endfor %}
+										</div>
+									</div>
+								</div>
+
+								<!-- Reviews -->
+								<div class="tab_panel tab_panel_3">
+									<div class="tab_panel_title">Course Review</div>
+
+									<!-- Rating -->
+									<div class="review_rating_container">
+										<div class="review_rating">
+											<div class="review_rating_num">4.5</div>
+											<div class="review_rating_stars">
+												<div class="rating_r rating_r_4"><i></i><i></i><i></i><i></i><i></i></div>
+											</div>
+											<div class="review_rating_text">(28 Ratings)</div>
+										</div>
+										<div class="review_rating_bars">
+											<ul>
+												<li><span>5 Star</span><div class="review_rating_bar"><div style="width:90%;"></div></div></li>
+												<li><span>4 Star</span><div class="review_rating_bar"><div style="width:75%;"></div></div></li>
+												<li><span>3 Star</span><div class="review_rating_bar"><div style="width:32%;"></div></div></li>
+												<li><span>2 Star</span><div class="review_rating_bar"><div style="width:10%;"></div></div></li>
+												<li><span>1 Star</span><div class="review_rating_bar"><div style="width:3%;"></div></div></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'js/course.js' %}"></script>
+</body>
+</html>
 {% endblock %}
