--- a/studij/templates/studij/homepage.html
+++ b/studij/templates/studij/homepage.html
@@ -1,10 +1,114 @@
 {% extends 'account/mypage.html' %}
-{% load static %}
+
+{% load static from staticfiles %}
+{% load extras %}
+
 {% block content %}
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
- <h2>Svi trenutni studiji na RiTehu:</h2>
-    {% csrf_token %}
-    {% for studij in smjerovi %}
-    <li><a href="/studij/studijski_programi/studij={{studij.studij_id}}">{{studij.studij_ime}}</a><br><br></li>
-    {% endfor %}
+
+
+<meta name="description" content="Unicat project">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/style_login.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'plugins/colorbox/colorbox.css' %}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course_responsive.css' %}">
+
+<div class="super_container">
+	<br><br><br>
+   <div class="course">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-lg-8">
+					<div class="course_container">
+						<div class="course_title">Arhiva kolegija</div>
+
+						<!-- Course Image -->
+						<div class="course_image"><img src="images/course_image.jpg" alt=""></div>
+
+
+							<div class="tab_panel active">
+								<div class="tab_panel_content">
+									<div class="tab_panel_title">Studijski programi</div>
+									<div class="tab_panel_content">
+										<div class="tab_panel_text">
+											<p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+										</div>
+
+										<!-- Dropdowns -->
+										<ul class="dropdowns">
+											<li class="has_children">
+												<div class="dropdown_item">
+													<div class="dropdown_item_title"><span>Preddiplomski studiji</span></div>
+												</div>
+												<ul>
+													{% csrf_token %}
+													{% for studij in predd %}
+													<li>
+														<div class="dropdown_item">
+															<div class="dropdown_item_title"><span><a href="/studij/studijski_programi/studij={{studij.studij_id}}">{{studij.studij_ime}}</a></span></div>
+														</div>
+													</li>
+													{% endfor %}
+												</ul>
+											</li>
+											<li class="has_children">
+												<div class="dropdown_item">
+													<div class="dropdown_item_title"><span>Diplomski studiji</span></div>
+												</div>
+												<ul>
+													{% csrf_token %}
+													{% for studij in dipl %}
+													<li>
+														<div class="dropdown_item">
+															<div class="dropdown_item_title"><span><a href="/studij/studijski_programi/studij={{studij.studij_id}}">{{studij.studij_ime}}</a></span></div>
+														</div>
+													</li>
+													{% endfor %}
+												</ul>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+				</div>
+			</div>
+		</div>
+</div>
+
+
+
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'js/course.js' %}"></script>
+</body>
+</html>
 {% endblock %}
