--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -80,7 +80,7 @@
                                                          <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
                                                      </form>
                                                 {% endif %}
-
+girt
                                         </div>
                                     </li>
                                     {% change obj.objava_id as prethodna_objava %}
@@ -154,13 +154,13 @@
 	</div>
 </div>
 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="styles/bootstrap4/popper.js"></script>
-<script src="styles/bootstrap4/bootstrap.min.js"></script>
-<script src="plugins/easing/easing.js"></script>
-<script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="plugins/colorbox/jquery.colorbox-min.js"></script>
-<script src="js/blog_single.js"></script>
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'js/blog_single.js' %}"></script>
 </body>
 </html>
 {% endblock %}
