--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -80,7 +80,7 @@
                                                          <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
                                                      </form>
                                                 {% endif %}
-girt
+                                                <a href="#id_tekst" onclick="copyText('{{user.username}}', '{{obj.tekst}}', '{{obj.date}}')">Odgovori</a>
                                         </div>
                                     </li>
                                     {% change obj.objava_id as prethodna_objava %}
@@ -161,6 +161,7 @@ girt
 <script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
 <script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
 <script src="{% static 'js/blog_single.js' %}"></script>
+<script src="{% static 'js/our_custom.js' %}"></script>
 </body>
 </html>
 {% endblock %}
