--- a/studij/templates/studij/homepage.html
+++ b/studij/templates/studij/homepage.html
@@ -26,12 +26,7 @@
 
 				<div class="col-lg-8">
 					<div class="course_container">
-						<div class="course_title">Arhiva kolegija</div>
-
-						<!-- Course Image -->
-						<div class="course_image"><img src="images/course_image.jpg" alt=""></div>
-
-
+						<div class="course_title">Arhiva kolegija</div><br>
 							<div class="tab_panel active">
 								<div class="tab_panel_content">
 									<div class="tab_panel_title">Studijski programi</div>
