--- a/tko_smo/templates/tko_smo/homepage.html
+++ b/tko_smo/templates/tko_smo/homepage.html
@@ -1,5 +1,6 @@
-{% extends 'base_template.html' %}
+{% extends 'index.html' %}
 
 {% block content %}
-    <h1>Tko smo homepage</h1>
+    <br><br><br><br><br>
+    <h1>Tko smo coming soon</h1>
 {% endblock %}
