--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -34,14 +34,17 @@
 							</div>
 							<nav class="main_nav_contaner ml-auto">
 								<ul class="main_nav">
-									<li class="active"><a href="{% url 'homepage' %}">Home</a></li>
-                                    <li><a href="{% url 'studij:homepage'%}">Studiji</a></li>
+									<li class="active"><a href="{% url 'homepage' %}">Početna</a></li>
+                                    <li>
+										<a href="{% url 'studij:homepage'%}">Arhiva kolegija</a>
+									</li>
+									<li>
+										 <a href="{% url 'account:mypage' %}">{{user.username}}</a><br>
+									</li>
 									<li class="dropdown">
-										<a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.get_username }}
+										<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 										<span class="caret"></span></a>
 										<div class="dropdown-menu">
-                                            <span class="fa fa-user" style="font-size:30px;color:blue "></span>
-                                            <a href="{% url 'account:mypage' %}">&nbsp Moj profil</a><br>
                                             <span class="fa fa-gear" style="font-size:30px;color:blue "></span>
 										  	<a href="{% url 'account:settings'%}">Postavke</a><br>
                                             <span class="fa fa-sign-out" style="font-size:30px;color:blue "></span>
