--- a/static/styles/course.css
+++ b/static/styles/course.css
@@ -1171,7 +1171,7 @@ section
 	top: 1px;
 	left: 0;
 	font-family: 'FontAwesome';
-	content: '\f0f6';
+	content: '\f067';
 	font-size: 18px;
 	color: #384158;
 	opacity: 0.65;
