--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -26,7 +26,7 @@
 				<!-- Course -->
 				<div class="col-lg-8">
 
-					<div class="course_container">
+					<div class="course_container" id="container-1">
 						<div class="course_title">{{kolegij_id}}
 
                         </div>
@@ -43,8 +43,8 @@
 						<!-- Course Tabs -->
 						<div class="course_tabs_container">
 							<div class="tabs d-flex flex-row align-items-center justify-content-start">
-								<div class="tab active">Opis kolegija</div>
-								<div class="tab">Materijali</div>
+								<div class="tab active" id="fragment-1">Opis kolegija</div>
+								<div class="tab" id="fragment-2">Materijali</div>
 							</div>
 
 							<div class="tab_panels">
@@ -201,6 +201,7 @@
 <script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
 <script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
 <script src="{% static 'js/course.js' %}"></script>
+<script src="{% static 'js/our_custom.js' %}"></script>
 </body>
 </html>
 {% endblock %}
